[feat]: add Import/Export DBs

--- a/localization/de-DE.json
+++ b/localization/de-DE.json
@@ -92,6 +92,26 @@
     "hours": "Stunden",
     "data": "Daten",
     "exportData": "Daten exportieren",
+    "importData": "Daten importieren",
+    "exportSettings": "Einstellungen exportieren",
+    "exportEntries": "Einträge exportieren",
+    "exportAll": "Alles exportieren",
+    "exportScope": "Was möchtest du exportieren?",
+    "exportSuccess": "Export erfolgreich!",
+    "exportError": "Fehler beim Exportieren.",
+    "importSuccess": "Import erfolgreich!",
+    "importError": "Fehler beim Importieren.",
+    "importInvalidFile": "Ungültige Datei. Bitte wähle eine Untense-Sicherungsdatei.",
+    "importCancelled": "Import abgebrochen.",
+    "importConfirmTitle": "Daten importieren",
+    "importConfirmMessage": "Die Sicherung vom {{date}} enthält:",
+    "importEntries": "{{count}} Einträge",
+    "importSettingsLabel": "Einstellungen",
+    "importIncludeEntries": "Einträge importieren",
+    "importIncludeSettings": "Einstellungen importieren",
+    "importWarning": "Vorhandene Einträge mit gleicher ID werden überschrieben.",
+    "importResultEntries": "{{count}} Einträge importiert.",
+    "importResultSettings": "Einstellungen importiert.",
     "deleteAllData": "Alle Daten löschen",
     "deleteAllConfirm": "Möchtest du wirklich alle Daten löschen? Diese Aktion kann nicht rückgängig gemacht werden.",
     "deleteAllConfirmTitle": "Alle Daten löschen",
