--- a/localization/en-GB.json
+++ b/localization/en-GB.json
@@ -92,6 +92,26 @@
     "hours": "Hours",
     "data": "Data",
     "exportData": "Export Data",
+    "importData": "Import Data",
+    "exportSettings": "Export Settings",
+    "exportEntries": "Export Entries",
+    "exportAll": "Export All",
+    "exportScope": "What would you like to export?",
+    "exportSuccess": "Export successful!",
+    "exportError": "Error during export.",
+    "importSuccess": "Import successful!",
+    "importError": "Error during import.",
+    "importInvalidFile": "Invalid file. Please choose an Untense backup file.",
+    "importCancelled": "Import cancelled.",
+    "importConfirmTitle": "Import Data",
+    "importConfirmMessage": "The backup from {{date}} contains:",
+    "importEntries": "{{count}} entries",
+    "importSettingsLabel": "Settings",
+    "importIncludeEntries": "Import entries",
+    "importIncludeSettings": "Import settings",
+    "importWarning": "Existing entries with the same ID will be overwritten.",
+    "importResultEntries": "{{count}} entries imported.",
+    "importResultSettings": "Settings imported.",
     "deleteAllData": "Delete All Data",
     "deleteAllConfirm": "Do you really want to delete all data? This action cannot be undone.",
     "deleteAllConfirmTitle": "Delete All Data",
