--- a/localization/de-DE.json
+++ b/localization/de-DE.json
@@ -139,6 +139,8 @@
     "calendarWeek": "KW {{week}}, {{year}}",
     "monthYear": "{{month}} {{year}}",
     "noDataForPeriod": "Keine Daten für diesen Zeitraum.",
+    "pickMonth": "Monat wählen",
+    "pickYear": "Jahr wählen",
     "avgPerDay": "Ø Anspannung pro Tag",
     "avgPerMonth": "Ø Anspannung pro Monat",
     "weekdays": {
